@@ -7,7 +7,7 @@
     <label name="endorsement_definition"/>
     <field name="endorsement_definition" readonly="1"/>
     <newline/>
-    <field name="endorsement_summary" colspan="4" readonly="1"/>
+    <field name="endorsement_summary" colspan="4" readonly="1" widget="richtext"/>
     <newline/>
     <field name="has_preview"/>
 </form>
