@@ -133,15 +133,13 @@ class EndorsementContract:
     def get_endorsement_summary(self, name):
         result = super(EndorsementContract, self).get_endorsement_summary(name)
         previous_billing_information = self.base_instance.billing_information
-        billing_summary = '\n'.join([billing_information.get_summary(
-                    'contract.billing_information',
-                    previous_billing_information, indent=4)
-                for billing_information in self.billing_informations])
+        billing_summary = [billing_information.get_summary(
+                'contract.billing_information', previous_billing_information)
+            for billing_information in self.billing_informations]
         if billing_summary:
-            result += '  %s :\n' % self.raise_user_error(
-                'mes_billing_modifications', raise_exception=False)
-            result += billing_summary
-            result += '\n\n'
+            result[2] += ['billing_change_section', '%s :'
+                % self.raise_user_error('mes_billing_modifications',
+                    raise_exception=False), billing_summary]
         return result
 
     @classmethod
